[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/mapelement/Firefly.gd" type="Script" id=1]
[ext_resource path="res://sprites/firefly.png" type="Texture" id=2]
[ext_resource path="res://sprites/firefly_light.png" type="Texture" id=3]

[node name="Firefly" type="Node2D"]
z_index = -8
z_as_relative = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 8
texture = ExtResource( 3 )
range_item_cull_mask = 8

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true
autostart = true

[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
